fix: secondary sidebar padding with scrollbar

--- a/src/sphinx_breeze_theme/assets/styles/sections/sidebar-secondary.css
+++ b/src/sphinx_breeze_theme/assets/styles/sections/sidebar-secondary.css
@@ -31,7 +31,7 @@
 
     > * {
       border-left: 1px solid var(--color-outline-variant);
-      padding-left: calc(var(--spacing) * 8);
+      padding-inline: calc(var(--spacing) * 8);
       &:not(:last-child) {
         padding-bottom: calc(var(--spacing) * 6);
       }
